# Mere_Toys

./: CipherGUI.java  NowSeekCiphers.java  README.md  importunateC.txt  importunateF.txt  readme.txt
A Classic Password Terminal/: launchClause.java
A Classic Password Terminal/Resources/: Thumbs.db
A Classic Password Terminal/Source/: .project  firstGUI.java  titleGUI.java
A Simple Polyalphabetic Cipher/: LetterFrequencies.java  importunate.txt  readme.txt
A Simple Polyalphabetic Cipher/Source/: .project  CipherGUI.java  MonoCipher.java  VCipher.java
Class files/: SquareCaret.java
NastyPrimes/: main.java
On Prime Number Algorithms/: readme.txt
On Prime Number Algorithms/NastyPrimes/: Primes.java  readme.txt
Referee Allocations/: RefereesIn.txt  ToRunTeamA.bat  readme.txt
Technicalities' Game of Life/: readme.txt
Technicalities' Game of Life/Source/: GameOfLife.java  LifeWorld.java
Trivial Referee Allocations (M-V-C)/: readme.txt
in Assembly/for the M68HC11/: readme.txt
in Assembly/for the Sigma16/: Maths the hard way.txt  On the machine.txt
in Assembly/for the Sigma16/Sigma16/: INSTALL  LICENSE  README  Sigma16.cabal
in Assembly/for the Sigma16/Sigma16/Sigma16-0.1.7/doc/html/: INSTALL.html  LICENSE.html  README.html  architecture.html  assembly.html  colophon.html  execution.html  index.html  linking.html  overview.html  programming.html  style.css  tutorial.html
in Assembly/for the Sigma16/Sigma16/Sigma16-0.1.7/examples/: Add.asm.txt  Factorial.asm.txt  LoadStore.asm.txt  Logic.asm.txt  Max.asm.txt  Mult.asm.txt  Shift.asm.txt  Write.asm.txt
in Assembly/for the Sigma16/Sigma16/Sigma16-0.1.7/src/datafiles/: welcome.txt  welcome1.txt  welcome2.txt
in Assembly/for the Sigma16/Sigma16/Sigma16-0.1.7/src/glade/: emu.glade
(+22 files in other folders)
